# kemu2-drawing

./: .gitignore  README.md
drive_game/: CMakeLists.txt  driving_game.cpp  ubuntu_build.md
driving_game/: CMakeLists.txt  README.md  car.cpp  car_Nissan_GTR_Full.SLDASM  car_build.sh  driving_game.cpp  run.sh  ubuntu_build.md
driving_game/mac_car/: README.md  car.cpp
gpt_drawing/: README.md
